# radiko-desktop

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: build-artifacts.yml  release.yml
public/: browser-loading.html  browser-sidebar.html  browser-toolbar.html  splash.html
src/: App.jsx  i18n.js  index.css  main.jsx  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  settings.rs  setup.rs  state.rs
src-tauri/src/commands/: backup.rs  browser.rs  custom_stations.rs  discord_cmd.rs  eq.rs  favicon.rs  mod.rs  player.rs  recognition.rs  scraping.rs  settings_cmd.rs  stations.rs
src-tauri/src/platform/: macos.rs  mod.rs  mouse_hook.rs  shortcut.rs  splash.rs  thumbbar.rs
src-tauri/src/player/: decoder.rs  device_monitor.rs  eq.rs  mod.rs  stream.rs  types.rs
src-tauri/src/services/: discord_rpc.rs  enricher.rs  media.rs  mod.rs  proxy.rs  stations.rs
src/components/common/: ConfirmModal.jsx  TagInput.jsx  TitleBar.jsx
src/components/layout/: Sidebar.jsx
src/components/player/: EqualizerPanel.jsx  MiniPlayer.jsx  NowPlaying.jsx  TrayPlayer.jsx
src/components/stations/: ApiSearchModal.jsx  EditStationModal.jsx  IdentifiedSongsList.jsx  StationList.jsx
src/contexts/: NotificationProvider.jsx
src/hooks/: useHttpLink.jsx
src/locales/: de.json  en.json  tr.json
src/views/: SettingsView.jsx  SetupScreen.jsx
